# forth-rs

./: Cargo.toml  Justfile  README.md
examples/: chars.f  fact.f  fizzbuzz.f  hello.f  integers.f  leap.f  pascal.f  stars.f  testsuite.f
include/: std.f  testsuite.f
src/: buildins.rs  compiled.rs  compiler.rs  custom.rs  errors.rs  executables.rs  expressions.rs  forth.rs  lib.rs  main.rs  memory.rs  numbers.rs  objects.rs  parser.rs  reader.rs  special.rs  tail.rs  tests.rs
