[package]
name = "forth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"

[dev-dependencies]
test-case = "3.2.1"

# See https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
strip = "symbols"
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[[bin]]
name = "forthrs"
path = "src/main.rs"
